header section all worked completed and services added just naw.Only the design remains.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
               </p>
             </div>
             <div class="banner-search">
-              <input type="text" />
+              <input
+                type="text"
+                placeholder="Search location, properties, residental group"
+              />
               <button>Search</button>
             </div>
             <div class="achievement-items">
@@ -66,5 +69,73 @@
       </div>
     </header>
     <!-- header end -->
+    <!-- Service section Start -->
+    <section class="service-section">
+      <div class="service">
+        <div class="container">
+          <div class="title">
+            <h2>Tahapan Pembelian Properti yang Mudah dan Cepat</h2>
+          </div>
+          <!-- service item -->
+          <div class="service-items">
+            <div class="service-item">
+              <div class="services-title">
+                <h4>Pilih Properti</h4>
+                <p>01</p>
+              </div>
+              <div class="services-article">
+                <p>
+                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                  keluarga. Cara memilih properti yang bijak dapat anda baca
+                  lebih lanjut di sini
+                </p>
+              </div>
+              <div class="services-redmore">
+                <a href="#">Baca lebih Lanjut</a>
+              </div>
+            </div>
+          </div>
+          <!-- service item -->
+          <div class="service-items">
+            <div class="service-item">
+              <div class="services-title">
+                <h4>Pilih Properti</h4>
+                <p>01</p>
+              </div>
+              <div class="services-article">
+                <p>
+                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                  keluarga. Cara memilih properti yang bijak dapat anda baca
+                  lebih lanjut di sini
+                </p>
+              </div>
+              <div class="services-redmore">
+                <a href="#">Baca lebih Lanjut</a>
+              </div>
+            </div>
+          </div>
+          <!-- service item -->
+          <div class="service-items">
+            <div class="service-item">
+              <div class="services-title">
+                <h4>Pilih Properti</h4>
+                <p>01</p>
+              </div>
+              <div class="services-article">
+                <p>
+                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                  keluarga. Cara memilih properti yang bijak dapat anda baca
+                  lebih lanjut di sini
+                </p>
+              </div>
+              <div class="services-redmore">
+                <a href="#">Baca lebih Lanjut</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Service section Start -->
   </body>
 </html>
