--- a/index.html
+++ b/index.html
@@ -74,11 +74,25 @@
       <div class="service">
         <div class="container">
           <div class="title">
-            <h2>Tahapan Pembelian Properti yang Mudah dan Cepat</h2>
+            <h1>Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
           </div>
-          <!-- service item -->
-          <div class="service-items">
-            <div class="service-item">
+          <div class="service-items"><!-- service items -->
+            <div class="service-item"><!-- service item -->
+              <div class="services-title">
+                <h4>Pilih Properti</h4>
+                <p>01</p>
+              </div>
+              <div class="services-article">
+                <p>
+                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
+                  keluarga. Cara memilih properti yang bijak dapat anda baca
+                  lebih lanjut di sini
+                </p>
+              </div>
+              <div class="services-redmore">
+                <a href="#">Baca lebih Lanjut</a>
+              </div>
+            <div class="service-item"><!-- service item -->
               <div class="services-title">
                 <h4>Pilih Properti</h4>
                 <p>01</p>
@@ -94,29 +108,7 @@
                 <a href="#">Baca lebih Lanjut</a>
               </div>
             </div>
-          </div>
-          <!-- service item -->
-          <div class="service-items">
-            <div class="service-item">
-              <div class="services-title">
-                <h4>Pilih Properti</h4>
-                <p>01</p>
-              </div>
-              <div class="services-article">
-                <p>
-                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
-                  keluarga. Cara memilih properti yang bijak dapat anda baca
-                  lebih lanjut di sini
-                </p>
-              </div>
-              <div class="services-redmore">
-                <a href="#">Baca lebih Lanjut</a>
-              </div>
-            </div>
-          </div>
-          <!-- service item -->
-          <div class="service-items">
-            <div class="service-item">
+            <div class="service-item"> <!-- service item -->
               <div class="services-title">
                 <h4>Pilih Properti</h4>
                 <p>01</p>
@@ -136,6 +128,6 @@
         </div>
       </div>
     </section>
-    <!-- Service section Start -->
+    <!-- Service section end -->
   </body>
 </html>
