completed services desing and removed all height

--- a/index.html
+++ b/index.html
@@ -76,23 +76,10 @@
           <div class="title">
             <h1>Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
           </div>
-          <div class="service-items"><!-- service items -->
-            <div class="service-item"><!-- service item -->
-              <div class="services-title">
-                <h4>Pilih Properti</h4>
-                <p>01</p>
-              </div>
-              <div class="services-article">
-                <p>
-                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
-                  keluarga. Cara memilih properti yang bijak dapat anda baca
-                  lebih lanjut di sini
-                </p>
-              </div>
-              <div class="services-redmore">
-                <a href="#">Baca lebih Lanjut</a>
-              </div>
-            <div class="service-item"><!-- service item -->
+          <div class="service-items">
+            <!-- service items -->
+            <div class="service-item">
+              <!-- service item -->
               <div class="services-title">
                 <h4>Pilih Properti</h4>
                 <p>01</p>
@@ -108,16 +95,32 @@
                 <a href="#">Baca lebih Lanjut</a>
               </div>
             </div>
-            <div class="service-item"> <!-- service item -->
+            <div class="service-item">
+              <!-- service item -->
               <div class="services-title">
-                <h4>Pilih Properti</h4>
-                <p>01</p>
+                <h4>Proses Booking</h4>
+                <p>02</p>
               </div>
               <div class="services-article">
                 <p>
-                  Cari properti yang diinginkan sesuai dengan kriteria anda dan
-                  keluarga. Cara memilih properti yang bijak dapat anda baca
-                  lebih lanjut di sini
+                  Pembayaran dalam bentuk sejumlah uang sebagai komitmen memesan
+                  unit properti tertentu.
+                </p>
+              </div>
+              <div class="services-redmore btn">
+                <a href="#">Baca lebih Lanjut</a>
+              </div>
+            </div>
+            <div class="service-item">
+              <!-- service item -->
+              <div class="services-title">
+                <h4>KPR dan Sertifikasi</h4>
+                <p>03</p>
+              </div>
+              <div class="services-article">
+                <p>
+                  Pembiayaan KPR untuk pembeli rumah dengan skema pembiayaan
+                  jika diperlukan dan dilanjutkan proses sertifkasi HGB.
                 </p>
               </div>
               <div class="services-redmore">
