Residen Favorit added and desing is completed

--- a/index.html
+++ b/index.html
@@ -132,5 +132,41 @@
       </div>
     </section>
     <!-- Service section end -->
+    <!-- Residen Favorit section start -->
+    <section class="residen-favorit-section">
+      <div class="container">
+        <div class="residen-favorit-title">
+          <p>Pilihan konsumen</p>
+          <h1>Residen Favorit</h1>
+        </div>
+        <div class="residen-favorit-showcase">
+          <div class="image">
+            <img
+              class="first-img"
+              src="./images/banner/recident-1.png"
+              alt="secound-img"
+            />
+            <img
+              class="secound-img"
+              src="./images/banner/recident-2.jpg"
+              alt=""
+            />
+          </div>
+          <div class="article">
+            <h1>Bangunan yang dirancang oleh Aristektur Handal</h1>
+            <p>
+              Tanpa diragukan, properti yang disediakan dalam webiste kami
+              merupakan hasil kerjasama secara profesional dengan para
+              Arsitektur ternama dan Developer yang terpercaya.
+            </p>
+            <div class="contact">
+              <a class="btn-one" href="#">Hubungi Kami</a>
+              <a class="btn-two" href="">Explore lebih banyak</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Residen Favorit section end -->
   </body>
 </html>
