Residents of Various Cities section added and design is completed

--- a/index.html
+++ b/index.html
@@ -168,5 +168,57 @@
       </div>
     </section>
     <!-- Residen Favorit section end -->
+
+    <!-- Residents of Various Cities section start-->
+    <section class="Residents-of-Various-Cities-section">
+      <div class="container">
+        <div class="articles-and-navigator">
+          <div class="article">
+            <p>Pilihan Auditor</p>
+            <h1>Residen Berbagai Kota</h1>
+          </div>
+          <div class="navigator">
+            <p><span> < </span></p>
+            <p><span>  > </span></p>
+          </div>
+        </div>
+        <div class="showcase">
+          <!-- showcase items -->
+          <div class="showcase-item">
+            <div class="image">
+              <img src="./images/banner/Various-Cities-1.jpg" alt="" />
+            </div>
+            <div class="showcase-article">
+              <h3>Magnolia Surabaya</h3>
+              pJl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </div>
+          </div>
+          <!-- showcase items -->
+          <div class="showcase-item">
+            <div class="image">
+              <img src="./images/banner/Various-Cities-2.jpg" alt="" />
+            </div>
+            <div class="showcase-article">
+              <h3>Magnolia Surabaya</h3>
+              pJl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </div>
+          </div>
+          <!-- showcase items -->
+          <div class="showcase-item">
+            <div class="image">
+              <img src="./images/banner/Various-Cities-3.jpg" alt="" />
+            </div>
+            <div class="showcase-article">
+              <h3>Magnolia Surabaya</h3>
+              pJl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Residents of Various Cities section end-->
   </body>
 </html>
