footer , social link and icon added and hover effect also added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 </p>
               </div>
               <div class="services-redmore">
-                <a href="#">Baca lebih Lanjut</a>
+                <a href="#"
+                  >Baca lebih Lanjut <i class="fa-solid fa-arrow-right"></i
+                ></a>
               </div>
             </div>
             <div class="service-item">
@@ -108,7 +110,9 @@
                 </p>
               </div>
               <div class="services-redmore btn">
-                <a href="#">Baca lebih Lanjut</a>
+                <a href="#"
+                  >Baca lebih Lanjut <i class="fa-solid fa-arrow-right"></i
+                ></a>
               </div>
             </div>
             <div class="service-item">
@@ -124,7 +128,9 @@
                 </p>
               </div>
               <div class="services-redmore">
-                <a href="#">Baca lebih Lanjut</a>
+                <a href="#"
+                  >Baca lebih Lanjut <i class="fa-solid fa-arrow-right"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -160,7 +166,9 @@
               Arsitektur ternama dan Developer yang terpercaya.
             </p>
             <div class="contact">
-              <a class="btn-one" href="#">Hubungi Kami</a>
+              <a class="btn-one" href="#">
+                <i class="fa-solid fa-phone"></i> Hubungi Kami</a
+              >
               <a class="btn-two" href="">Explore lebih banyak</a>
             </div>
           </div>
@@ -179,7 +187,7 @@
           </div>
           <div class="navigator">
             <p><span> < </span></p>
-            <p><span>  > </span></p>
+            <p><span> > </span></p>
           </div>
         </div>
         <div class="showcase">
@@ -220,5 +228,72 @@
       </div>
     </section>
     <!-- Residents of Various Cities section end-->
+    <!-- footee section start -->
+    <footer class="footer">
+      <div class="container">
+        <div class="showcase">
+          <div class="contact">
+            <h1>Hubungi Kami</h1>
+            <div class="contact-info">
+              <div class="call">
+                <div class="phone-num">
+                  <div class="icon">
+                    <i class="fa-solid fa-phone"></i>
+                  </div>
+                  <div class="num">
+                    <p>Call</p>
+                    <p>+6281232936733</p>
+                  </div>
+                </div>
+                <div class="btn">
+                  <a href="#">Call Now</a>
+                </div>
+              </div>
+              <div class="email">
+                <div class="email-address">
+                  <div class="icon">
+                    <i class="fa-solid fa-envelope"></i>
+                  </div>
+                  <div class="email-num">
+                    <p>Email</p>
+                    <p>omahindev@gmail.com</p>
+                  </div>
+                </div>
+                <div class="btn">
+                  <a href="#">Email Now</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="awards">
+            <h1>Penghargaan</h1>
+            <div class="awards-img">
+              <img src="./images/banner/awards-1.png" alt="" />
+              <img src="./images/banner/awards-2.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="brand-and-social-media">
+        <div class="container">
+          <div class="links">
+            <div class="logo">
+              <p><samp class="brand-sine">O</samp>mah</p>
+            </div>
+            <div class="social-link">
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- footee section end -->
+    <script
+      src="https://kit.fontawesome.com/deb5ec3c82.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
